# LOIP

./: .gitattributes  .gitignore  ARCHITECTURE.md  DASHBOARD.md  LOIP Review Console (standalone).html  LOIP_BUILD_PLAN.md  LOIP_BUILD_PLAN_v3_PersonalLoans_India.md  LOIP_Complete_Audit.html  LOIP_Presentation.html  PROJECT_STATUS.md  README.md  SESSION_SUMMARY_2026-06-20.md  architectural_review.md  package.json  start-demo-real.sh  start-demo.sh
loip/: .env.example  alembic.ini  config.py  docker-compose.yml  evaluate.py  events.py  graph.py  persistence.py  pyproject.toml  storage.py  validation.py
loip/alembic/: env.py
loip/alembic/versions/: 001_initial_schema.py  002_application_decision_json.py
loip/data/: manifest.json
loip/data/annotation_sample25/: aadhaar_009d58b6.json  aadhaar_00b10906.json  aadhaar_00d27bf1.json  aadhaar_00e3ed4a.json  aadhaar_00f9ef78.json  bank_statement_0008921d.json  bank_statement_002a5ade.json  bank_statement_002bb031.json  bank_statement_00537022.json  bank_statement_0079eac9.json  form16_002d89ea.json  form16_0075d458.json  form16_0077ae42.json  itr_00ad00e3.json  itr_018862dd.json  pan_00067757.json  pan_00488c70.json  pan_00c5acb6.json  pan_00e12f84.json  pan_0151c290.json  salary_slip_004936f9.json  salary_slip_00557b8a.json  salary_slip_006282ec.json  salary_slip_007194d6.json  salary_slip_0074a3b2.json
loip/data/training/: affordability_synthetic.csv  fraud_synthetic.csv  income_synthetic.csv  risk_synthetic.csv
loip/docs/: API.md  COMPLIANCE.md  DATA_GUIDANCE_NOTES.md  DEMO.md  RUNBOOK.md  SETUP.md
loip/docs/screenshots/: README.md
loip/domains/affordability/: __init__.py  processor.py
loip/domains/compliance/: __init__.py  processor.py  schemas.py
loip/domains/document_intel/: __init__.py  processor.py  schemas.py
loip/domains/explainability/: __init__.py  copilot.py  lime_explainer.py  processor.py  schemas.py  shap_explainer.py
loip/domains/fraud/: __init__.py  processor.py
loip/domains/human_review/: __init__.py  processor.py  schemas.py
loip/infra/: prometheus.yml
loip/integrations/: __init__.py  base.py  cibil_client.py  digilocker_client.py  experian_client.py  mca21_client.py  nsdl_client.py  uidai_client.py
loip/keys/: uidai_public_key.pem
loip/models/: __init__.py  arcface_wrapper.py  bge_m3_wrapper.py  donut_wrapper.py  graphsage_wrapper.py  layoutlmv3_wrapper.py  lightgbm_wrapper.py  minifasnet_wrapper.py  paddleocr_wrapper.py  preprocessing.py  qwen2_5_vl_wrapper.py  surya_wrapper.py  xgboost_wrapper.py
loip/pipelines/: base.py  onboarding.py
loip/schemas/: __init__.py  affordability.py  bureau.py  consent.py  db_models.py  decision.py  evidence.py  fraud.py  identity.py  income.py  vcip.py
loip/scripts/: capture_screenshots.py  download_datasets.py  download_rvlcdip_subset.py  evaluate_qwen_docvqa.py  generate_corpus.py  seed_db.py
loip/services/: eligibility.py
loip/web/: api.py  auth.py  startup.py
loip/web/routes/: demo.py  (+10 more)
(+160 files in other folders)
