[project]
name = "loip"
version = "0.1.0"
description = "Loan Onboarding Intelligence Platform — Personal Loans, India"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "jinja2>=3.1",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",

    # Object storage
    "minio>=7.2",

    # Search / audit logs
    "opensearch-py>=2.6",

    # Graph database
    "neo4j>=5.20",

    # Message queue
    "aiokafka>=0.10",

    # Cache / feature store
    "redis>=5.0",

    # Image processing
    "pillow>=10.3",
    "opencv-python-headless>=4.10",
    "numpy>=1.26",
    "pdf2image>=1.17",

    # PDF generation (for generators)
    "reportlab>=4.2",
    "fpdf2>=2.7",

    # Data generation
    "faker>=28.0",

    # Utilities
    "pydantic>=2.8",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "click>=8.1",
    "rich>=13.7",

    # Security scanning
    "bandit>=1.7",
    "pip-audit>=2.7",
    "safety>=3.2",
]

[project.optional-dependencies]
tabular-ml = [
    # Phase 1 tabular/graph ML wrappers (XGBoost, LightGBM, GraphSAGE) — lightweight,
    # no torch/transformers required. Install into .venv-ml (Python 3.11).
    "xgboost>=2.1",
    "lightgbm>=4.4",
    "scikit-learn>=1.5",
    "networkx>=3.4",
]
ml = [
    # ML / model serving
    "xgboost>=2.1",
    "lightgbm>=4.4",
    "scikit-learn>=1.5",
    "shap>=0.45",
    "lime>=0.2",
    "mlflow>=2.15",
    "feast>=0.39",
    "evidently>=0.4",
    # NLP / embeddings
    "sentence-transformers>=3.0",
    "FlagEmbedding>=1.2",
    # PII detection
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]
ocr = [
    # OCR / document intelligence (requires Python <=3.12 for paddlepaddle)
    "paddleocr>=2.8",
    "paddlepaddle>=2.6",
    "surya-ocr>=0.6",
]
gpu = [
    # GPU model serving (Linux only)
    "torch>=2.3",
    "torchvision>=0.18",
    "timm>=1.0",
    "transformers>=4.42",
    "vllm>=0.5",
]
all = ["loip[ml,ocr,gpu]"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "aiosqlite>=0.20",
    "playwright>=1.45",  # docs/screenshots capture (scripts/capture_screenshots.py)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schemas", "scripts", "integrations"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
